# rspass

./: Cargo.toml  README.md
src/: cli.rs  encrypt.rs  main.rs  ui_main.rs  vault.rs
